// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generates token 1`] = `
<TokenStep
  finished={false}
  onContinue={[Function]}
  onOpen={[Function]}
  open={true}
  stepNumber={1}
>
  <Step
    finished={false}
    onOpen={[Function]}
    open={true}
    renderForm={[Function]}
    renderResult={[Function]}
    stepNumber={1}
    stepTitle="onboarding.token.header"
  >
    <div
      className="boxed-group onboarding-step is-open"
    >
      <div
        className="onboarding-step-number"
      >
        1
      </div>
      <div
        className="boxed-group-header"
      >
        <h2>
          onboarding.token.header
        </h2>
      </div>
      <div
        className="boxed-group-inner"
      >
        <form
          onSubmit={[Function]}
        >
          <input
            autoFocus={true}
            className="input-large spacer-right text-middle"
            onChange={[Function]}
            placeholder="onboarding.token.placeholder"
            required={true}
            type="text"
            value=""
          />
          <button
            className="text-middle"
          >
            onboarding.token.generate
          </button>
        </form>
        <div
          className="note big-spacer-top width-50"
        >
          onboarding.token.text
        </div>
      </div>
    </div>
  </Step>
</TokenStep>
`;

exports[`generates token 2`] = `
<TokenStep
  finished={false}
  onContinue={[Function]}
  onOpen={[Function]}
  open={true}
  stepNumber={1}
>
  <Step
    finished={false}
    onOpen={[Function]}
    open={true}
    renderForm={[Function]}
    renderResult={[Function]}
    stepNumber={1}
    stepTitle="onboarding.token.header"
  >
    <div
      className="boxed-group onboarding-step is-open"
    >
      <div
        className="onboarding-step-number"
      >
        1
      </div>
      <div
        className="boxed-group-header"
      >
        <h2>
          onboarding.token.header
        </h2>
      </div>
      <div
        className="boxed-group-inner"
      >
        <form
          onSubmit={[Function]}
        >
          <input
            autoFocus={true}
            className="input-large spacer-right text-middle"
            onChange={[Function]}
            placeholder="onboarding.token.placeholder"
            required={true}
            type="text"
            value="my token"
          />
          <i
            className="spinner text-middle"
          />
        </form>
        <div
          className="note big-spacer-top width-50"
        >
          onboarding.token.text
        </div>
      </div>
    </div>
  </Step>
</TokenStep>
`;

exports[`generates token 3`] = `
<TokenStep
  finished={false}
  onContinue={[Function]}
  onOpen={[Function]}
  open={true}
  stepNumber={1}
>
  <Step
    finished={false}
    onOpen={[Function]}
    open={true}
    renderForm={[Function]}
    renderResult={[Function]}
    stepNumber={1}
    stepTitle="onboarding.token.header"
  >
    <div
      className="boxed-group onboarding-step is-open"
    >
      <div
        className="onboarding-step-number"
      >
        1
      </div>
      <div
        className="boxed-group-header"
      >
        <h2>
          onboarding.token.header
        </h2>
      </div>
      <div
        className="boxed-group-inner"
      >
        <form
          onSubmit={[Function]}
        >
          <span
            className="text-middle"
          >
            my token
            : 
          </span>
          <strong
            className="spacer-right text-middle"
          >
            abcd1234
          </strong>
          <button
            className="button-clean text-middle"
            onClick={[Function]}
          >
            <CloseIcon
              className="icon-red"
            >
              <svg
                className="icon-red"
                height={16}
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.843 11.232q0 0.357-0.25 0.607l-1.214 1.214q-0.25 0.25-0.607 0.25t-0.607-0.25l-2.625-2.625-2.625 2.625q-0.25 0.25-0.607 0.25t-0.607-0.25l-1.214-1.214q-0.25-0.25-0.25-0.607t0.25-0.607l2.625-2.625-2.625-2.625q-0.25-0.25-0.25-0.607t0.25-0.607l1.214-1.214q0.25-0.25 0.607-0.25t0.607 0.25l2.625 2.625 2.625-2.625q0.25-0.25 0.607-0.25t0.607 0.25l1.214 1.214q0.25 0.25 0.25 0.607t-0.25 0.607l-2.625 2.625 2.625 2.625q0.25 0.25 0.25 0.607z"
                  fill="currentColor"
                />
              </svg>
            </CloseIcon>
          </button>
        </form>
        <div
          className="note big-spacer-top width-50"
        >
          onboarding.token.text
        </div>
        <div
          className="big-spacer-top"
        >
          <button
            className="js-continue"
            onClick={[Function]}
          >
            continue
          </button>
        </div>
      </div>
    </div>
  </Step>
</TokenStep>
`;

exports[`revokes token 1`] = `
<TokenStep
  finished={false}
  onContinue={[Function]}
  onOpen={[Function]}
  open={true}
  stepNumber={1}
>
  <Step
    finished={false}
    onOpen={[Function]}
    open={true}
    renderForm={[Function]}
    renderResult={[Function]}
    stepNumber={1}
    stepTitle="onboarding.token.header"
  >
    <div
      className="boxed-group onboarding-step is-open"
    >
      <div
        className="onboarding-step-number"
      >
        1
      </div>
      <div
        className="boxed-group-header"
      >
        <h2>
          onboarding.token.header
        </h2>
      </div>
      <div
        className="boxed-group-inner"
      >
        <form
          onSubmit={[Function]}
        >
          <span
            className="text-middle"
          >
            my token
            : 
          </span>
          <strong
            className="spacer-right text-middle"
          >
            abcd1234
          </strong>
          <button
            className="button-clean text-middle"
            onClick={[Function]}
          >
            <CloseIcon
              className="icon-red"
            >
              <svg
                className="icon-red"
                height={16}
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.843 11.232q0 0.357-0.25 0.607l-1.214 1.214q-0.25 0.25-0.607 0.25t-0.607-0.25l-2.625-2.625-2.625 2.625q-0.25 0.25-0.607 0.25t-0.607-0.25l-1.214-1.214q-0.25-0.25-0.25-0.607t0.25-0.607l2.625-2.625-2.625-2.625q-0.25-0.25-0.25-0.607t0.25-0.607l1.214-1.214q0.25-0.25 0.607-0.25t0.607 0.25l2.625 2.625 2.625-2.625q0.25-0.25 0.607-0.25t0.607 0.25l1.214 1.214q0.25 0.25 0.25 0.607t-0.25 0.607l-2.625 2.625 2.625 2.625q0.25 0.25 0.25 0.607z"
                  fill="currentColor"
                />
              </svg>
            </CloseIcon>
          </button>
        </form>
        <div
          className="note big-spacer-top width-50"
        >
          onboarding.token.text
        </div>
        <div
          className="big-spacer-top"
        >
          <button
            className="js-continue"
            onClick={[Function]}
          >
            continue
          </button>
        </div>
      </div>
    </div>
  </Step>
</TokenStep>
`;

exports[`revokes token 2`] = `
<TokenStep
  finished={false}
  onContinue={[Function]}
  onOpen={[Function]}
  open={true}
  stepNumber={1}
>
  <Step
    finished={false}
    onOpen={[Function]}
    open={true}
    renderForm={[Function]}
    renderResult={[Function]}
    stepNumber={1}
    stepTitle="onboarding.token.header"
  >
    <div
      className="boxed-group onboarding-step is-open"
    >
      <div
        className="onboarding-step-number"
      >
        1
      </div>
      <div
        className="boxed-group-header"
      >
        <h2>
          onboarding.token.header
        </h2>
      </div>
      <div
        className="boxed-group-inner"
      >
        <form
          onSubmit={[Function]}
        >
          <span
            className="text-middle"
          >
            my token
            : 
          </span>
          <strong
            className="spacer-right text-middle"
          >
            abcd1234
          </strong>
          <i
            className="spinner text-middle"
          />
        </form>
        <div
          className="note big-spacer-top width-50"
        >
          onboarding.token.text
        </div>
        <div
          className="big-spacer-top"
        >
          <button
            className="js-continue"
            onClick={[Function]}
          >
            continue
          </button>
        </div>
      </div>
    </div>
  </Step>
</TokenStep>
`;

exports[`revokes token 3`] = `
<TokenStep
  finished={false}
  onContinue={[Function]}
  onOpen={[Function]}
  open={true}
  stepNumber={1}
>
  <Step
    finished={false}
    onOpen={[Function]}
    open={true}
    renderForm={[Function]}
    renderResult={[Function]}
    stepNumber={1}
    stepTitle="onboarding.token.header"
  >
    <div
      className="boxed-group onboarding-step is-open"
    >
      <div
        className="onboarding-step-number"
      >
        1
      </div>
      <div
        className="boxed-group-header"
      >
        <h2>
          onboarding.token.header
        </h2>
      </div>
      <div
        className="boxed-group-inner"
      >
        <form
          onSubmit={[Function]}
        >
          <input
            autoFocus={true}
            className="input-large spacer-right text-middle"
            onChange={[Function]}
            placeholder="onboarding.token.placeholder"
            required={true}
            type="text"
            value=""
          />
          <button
            className="text-middle"
          >
            onboarding.token.generate
          </button>
        </form>
        <div
          className="note big-spacer-top width-50"
        >
          onboarding.token.text
        </div>
      </div>
    </div>
  </Step>
</TokenStep>
`;
